force-app/main/default/objects/custom_create382__c/custom_create382__c.object-meta.xml
<CustomObject>
    <label>Custom created object382</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects382</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>