force-app/main/default/objects/custom_create382__c/fields/custom_create_382field517__c.field-meta.xml
<CustomField>
    <fullName>custom_create_382field517__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 382field517</label>
    <type>Checkbox</type>
</CustomField>